--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -390,32 +390,32 @@ jobs:
       - destroy-environment
       - revert-migrations
 
-# cleanup:
-#     docker:
-#       - image: amazon/aws-cli
-#     steps:
-#       - checkout
-#       - run:
-#           name: Get old workflow ID and remove old stacks and files
-#           command: |
-#             OLD_WORKFLOW_ID=$(curl -H "token: 7079126b-54c1-4ae1-b7cf-577d8a27c76f" --request GET https://api.memstash.io/values/OLD_WORKFLOW_ID)
-#             echo "OLD_WORKFLOW_ID=$OLD_WORKFLOW_ID"
-#             NEW_WORKFLOW_ID=${CIRCLE_WORKFLOW_ID:0:7}
-#             echo "NEW_WORKFLOW_ID=$NEW_WORKFLOW_ID"
-#             if [ -z "$OLD_WORKFLOW_ID" ]
-#             then
-#                 echo "No OLD_WORKFLOW_ID found, nothing to cleanup."
-#             else
-#                 if [[ "$NEW_WORKFLOW_ID" != "$OLD_WORKFLOW_ID" ]]
-#                 then
-#                     echo "$OLD_WORKFLOW_ID!=$NEW_WORKFLOW_ID: the old stack and files are going to be deleted"
-#                     aws s3 rm "s3://udapeople-${OLD_WORKFLOW_ID}" --recursive
-#                     aws cloudformation delete-stack --stack-name "my-frontend-stack-${OLD_WORKFLOW_ID}"
-#                     aws cloudformation delete-stack --stack-name "my-backend-stack-${OLD_WORKFLOW_ID}"
-#                 else
-#                     echo "$OLD_WORKFLOW_ID==$NEW_WORKFLOW_ID: the old and new stacks are the same, no changes applied"
-#                 fi
-#             fi
+cleanup:
+    docker:
+      - image: cimg/base:stable
+    steps:
+      - checkout
+      - install_aws_cli
+      - install_nodejs
+      - run:
+          name: Get old workflow ID and remove old stacks and files
+          command: |
+            export CLOUD_FORMATION_STACKS=($(aws cloudformation list-stacks \
+                --query "StackSummaries[*].StackName" \
+                --stack-status-filter CREATE_COMPLETE --no-paginate --output text)) 
+            
+            echo Stack names: "${CLOUD_FORMATION_STACKS[@]}"
+            
+            export OldWorkflowID=$(curl --insecure https://kvdb.io/${KVDB_BUCKET}/old_workflow_id)
+            echo Old Workflow ID: $OldWorkflowID 
+            
+            if [[ "${CLOUD_FORMATION_STACKS[@]}" =~ "${OldWorkflowID}" ]]
+            then
+              aws s3 rm "s3://udapeople-${OldWorkflowID}" --recursive
+              aws cloudformation delete-stack --stack-name "my-backend-${OldWorkflowID}"
+              aws cloudformation delete-stack --stack-name "my-frontend-${OldWorkflowID}"
+            fi
+
   notify_on_success:
     docker: 
       - image: cimg/base:stable
@@ -461,5 +461,5 @@ workflows:
           requires: [deploy-backend, deploy-frontend]
       - cloudfront-update:
           requires: [smoke-test]
-      # - cleanup:
-      #     requires: [cloudfront-update]
+      - cleanup:
+          requires: [cloudfront-update]
