--- a/.circleci/ansible/roles/configure-server/tasks/main.yml
+++ b/.circleci/ansible/roles/configure-server/tasks/main.yml
@@ -2,15 +2,11 @@
 - name: "Add nodejs from Nodesource"
   become: true
   shell: |
-    curl -fsSL https://deb.nodesource.com/setup_13.x | sudo -E bash -
-    apt-get install -y nodejs
+    curl -fsSL https://deb.nodesource.com/setup_lts.x | sudo -E bash -
+    sudo apt install -y nodejs
 
-- name: "Install nodejs 13"
-  become: true
-  apt:
-    name: ["nodejs","npm"]
-    state: latest
-    update_cache: yes
+    sudo npm install --global n
+    sudo n 13.8.0
 
 - name: "Install pm2"
   npm:
